# paper-mash

./: CMakeLists.txt  color.frag  color.vert
forms/: mainwindow.cpp  mainwindow.h  mainwindow.ui  synced-dual-scroller.cpp  synced-dual-scroller.h  synced-dual-scroller.ui
include/: image-io.h  mesh.h  paper-structs.h  render-window.h
libs/freeglut/lib/cmake/FreeGLUT/: FreeGLUTTargets-debug.cmake  FreeGLUTTargets.cmake
libs/freeglut/lib/pkgconfig/: freeglut.pc
resources/: color.frag  color.vert  mask.frag  mask.vert  texture.frag  texture.vert
src/: image-io.cpp  main.cpp  mesh.cpp  render-window.cpp
